--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ body {
 <body>
 
 <div class="logo-container">
-  <img src="jasur/Batyr (1).png" alt="Логотип ресторана" onerror="this.style.display='none'">
+  <img src="https://github.com/Skinnyenxis/menu/blob/main/Batyr%20(1).png?raw=true" alt="Логотип ресторана" onerror="this.style.display='none'">
 </div>
 
 <div class="container">
