--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       let text = Здравствуйте! Хотели заказать у вас \nТип заказа: ${type}\nКоличество гостей: ${guests}\nДата: ${date}\nВремя: ${time};
 
       let url = https://wa.me/77069639442?text=${encodeURIComponent(text)};
-      window.open(url, '_blank');
+      window.open(url = https://wa.me/77069639442?text=${encodeURIComponent(text)}, '_blank');
     }
   </script>
 
