--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
       <option value="Приготовление блюд">Приготовление блюд</option>
     </select>
 
+    <input type="text" id="assorti" placeholder="тип ассорти" />
     <input type="number" id="guests" placeholder="Количество гостей" />
     <input type="date" id="date" />
     <input type="time" id="time" />
