--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 
     <div class="menu-card">
       <h3>Рулеты</h3>
+      <h4>нежные, сочные, любимые</h4>
       <p>Куриные рулеты</p>
       <p>Мясные рулеты</p>
       <p>Фирменные рулеты</p>
@@ -114,6 +115,7 @@
 
     <div class="menu-card">
       <h3>Котлеты</h3>
+      <h4>Нежные и натуральные</h4>
       <p>Куриные котлеты</p>
       <p>Говяжьи котлеты</p>
       <p>Ассорти котлет</p>
@@ -163,7 +165,7 @@
 Дата: ${date}
 Время: ${time}`;
 
-      let url = `https://wa.me/77069639442?text=${encodeURIComponent(text)}`;
+      let url = `https://wa.me/77066399442?text=${encodeURIComponent(text)}`;
       window.open(url, '_blank');
     }
   </script>
