--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <img src="img/g12.jpg">
       <img src="img/g13.jpg">
       <img src="img/g14.jpg">
-      <img src="img/g15.jpg">
+      <img src="/WhatsApp Image 2025-11-26 at 14.35.23 (1).jpeg">
     </div>
   </section>
 
