--- a/index.html
+++ b/index.html
@@ -186,20 +186,13 @@
   <section class="gallery">
     <h2>Галерея</h2>
     <div class="gallery-grid">
-      <img src="img/g1.jpg">
-      <img src="img/g2.jpg">
-      <img src="img/g3.jpg">
-      <img src="img/g4.jpg">
-      <img src="img/g5.jpg">
-      <img src="img/g6.jpg">
-      <img src="img/g7.jpg">
-      <img src="img/g8.jpg">
-      <img src="img/g9.jpg">
-      <img src="img/g10.jpg">
-      <img src="img/g11.jpg">
-      <img src="img/g12.jpg">
-      <img src="img/g13.jpg">
-      <img src="img/g14.jpg">
+      <img src="pics/WhatsApp Image 2025-11-26 at 14.36.55.jpeg">
+      <img src="pics/WhatsApp Image 2025-11-26 at 14.35.23.jpeg">
+      <img src="pics/WhatsApp Image 2025-11-26 at 14.35.22.jpeg">
+      <img src="pics/WhatsApp Image 2025-11-26 at 14.35.19.jpeg">
+      <img src="pics/WhatsApp Image 2025-11-26 at 14.35.18.jpeg">
+      <img src="pics/WhatsApp Image 2025-11-26 at 14.35.17.jpeg">
+      <img src="pics/WhatsApp Image 2025-11-26 at 14.35.14.jpeg">
       <img src="pics/WhatsApp Image 2025-11-26 at 14.37.09.jpeg">
     </div>
   </section>
