--- a/index.html
+++ b/index.html
@@ -65,16 +65,18 @@
       padding: 20px;
     }
 
-    .assorti-grid img {
+    .assorti-grid img,
+    .gallery-grid img {
       width: 100%;
       height: 200px;
       object-fit: cover;
       border-radius: 10px;
       border: 1px solid #8b6f27;
       transition: transform 0.4s ease-out;
+      cursor: pointer;
     }
 
-    .assorti-grid img:hover {
+    .gallery-grid img:hover {
       transform: scale(1.05);
     }
 
@@ -95,17 +97,25 @@
       padding: 20px;
     }
 
-    .gallery-grid img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
-      border: 1px solid #8b6f27;
-      transition: transform 0.4s ease-out;
+    /* Lightbox */
+    #lightbox {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.9);
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
     }
 
-    .gallery-grid img:hover {
-      transform: scale(1.05);
+    #lightbox img {
+      max-width: 95%;
+      max-height: 95%;
+      border-radius: 10px;
+    }
+
+    #lightbox:active {
+      display: none;
     }
 
     /* Бронирование */
@@ -230,6 +240,11 @@
     </div>
   </section>
 
+  <!-- Лайтбокс -->
+  <div id="lightbox">
+    <img src="">
+  </div>
+
   <div class="bron">
     <h2 style="text-align:center;color:#ffd98e;">Бронирование</h2>
 
@@ -251,6 +266,7 @@
   </div>
 
   <script>
+    // WhatsApp
     function sendWA() {
       let type = document.getElementById('orderType').value;
       let assorti = document.getElementById('assorti').value;
@@ -274,6 +290,21 @@
       let url = `https://wa.me/77069639442?text=${encodeURIComponent(text)}`;
       window.open(url, '_blank');
     }
+
+    // LIGHTBOX
+    const lightbox = document.getElementById("lightbox");
+    const lightboxImg = lightbox.querySelector("img");
+
+    document.querySelectorAll(".gallery-grid img, .assorti-grid img").forEach(img => {
+      img.addEventListener("click", () => {
+        lightbox.style.display = "flex";
+        lightboxImg.src = img.src;
+      });
+    });
+
+    lightbox.addEventListener("click", () => {
+      lightbox.style.display = "none";
+    });
   </script>
 
 </body>
