--- a/index.html
+++ b/index.html
@@ -199,23 +199,24 @@
   <section class="menu-section">
     <div class="menu-card">
       <h3>Рулеты</h3>
-      <p>Куриные рулеты</p>
-      <p>Мясные рулеты</p>
+      <p>Куриные рулеты  2800</p>
+      <p>Мясные микс рулеты   3000</p>
       <p>Фирменные рулеты</p>
     </div>
 
     <div class="menu-card">
-      <h3>Котлеты</h3>
-      <p>Куриные котлеты</p>
-      <p>Говяжьи котлеты</p>
-      <p>Ассорти котлет</p>
+      <h3>холодные закуски</h3>
+      <p>котлеты мясные   220</p>
+      <p>долма    200</p>
+      <p>дунганский перец   8000/кг</p>
     </div>
 
     <div class="menu-card">
       <h3>Готовые ассорти</h3>
-      <p>Рыбное ассорти (дракон)</p>
-      <p>Куриное ассорти (байтерек)</p>
-      <p>Куриные и мясные нарезки (традиционные)</p>
+      <p>закуска из рыбы (дракон)   12000</p>
+      <p>мясное ассорти (байтерек)   12000</p>
+      <p>хололдное ассорти    3800</p>
+      <p>Куриное ассорти    4000</p>
     </div>
 
     <div class="menu-card">
